--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
 
+.SideBar {
+  height: 100%;
+  flex-shrink: 0;
+}
+
+.TopBar {
+  width: 100%;
+  flex-shrink: 0;
+}
+
+.PathfindingVisualizer {
+  display: flex;
+  flex-grow: 1;
+  overflow: auto;
+  margin-top: -45px;
+}
+
 .Portfolio {
   text-align: center;
+}
+
+.content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.grid {
+  margin-left: 100px;
 }
 
 .Site-Collection {
